// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component should render - multiple schema 1`] = `
<Stack
  hasGutter={true}
>
  <StackItem
    key="settings-form-0"
  >
    <Card>
      <CardBody>
        <FormRenderer
          FormTemplate={[Function]}
          clearOnUnmount={false}
          componentMapper={
            Object {
              "checkbox": [Function],
              "date-picker": [Function],
              "dual-list-select": Object {
                "availableOptionsActions": Array [
                  <DualListSortButton
                    position="left"
                  />,
                ],
                "chosenOptionsActions": Array [
                  <DualListSortButton
                    position="right"
                  />,
                ],
                "component": [Function],
                "isFilterable": true,
                "isSearchable": true,
                "isSortable": true,
                "resolveProps": [Function],
              },
              "field-array": [Function],
              "plain-text": [Function],
              "plain-text-with-links": [Function],
              "radio": [Function],
              "select": [Function],
              "select-field": [Function],
              "slider": [Function],
              "sub-form": [Function],
              "switch": [Function],
              "switch-field": [Function],
              "tabs": [Function],
              "text-field": [Function],
              "textarea": [Function],
              "textarea-field": [Function],
              "time-picker": [Function],
              "wizard": [Function],
            }
          }
          initialValues={Object {}}
          onSubmit={[Function]}
          schema={Object {}}
          submitLabel="Save"
          validatorMapper={
            Object {
              "exact-length-validator": [Function],
              "max-length-validator": [Function],
              "min-items-validator": [Function],
              "min-length-validator": [Function],
              "pattern-validator": [Function],
              "required-validator": [Function],
              "url-validator": [Function],
            }
          }
        />
      </CardBody>
    </Card>
  </StackItem>
  <StackItem
    key="settings-form-1"
  >
    <Card>
      <CardBody>
        <FormRenderer
          FormTemplate={[Function]}
          clearOnUnmount={false}
          componentMapper={
            Object {
              "checkbox": [Function],
              "date-picker": [Function],
              "dual-list-select": Object {
                "availableOptionsActions": Array [
                  <DualListSortButton
                    position="left"
                  />,
                ],
                "chosenOptionsActions": Array [
                  <DualListSortButton
                    position="right"
                  />,
                ],
                "component": [Function],
                "isFilterable": true,
                "isSearchable": true,
                "isSortable": true,
                "resolveProps": [Function],
              },
              "field-array": [Function],
              "plain-text": [Function],
              "plain-text-with-links": [Function],
              "radio": [Function],
              "select": [Function],
              "select-field": [Function],
              "slider": [Function],
              "sub-form": [Function],
              "switch": [Function],
              "switch-field": [Function],
              "tabs": [Function],
              "text-field": [Function],
              "textarea": [Function],
              "textarea-field": [Function],
              "time-picker": [Function],
              "wizard": [Function],
            }
          }
          initialValues={Object {}}
          onSubmit={[Function]}
          schema={Object {}}
          submitLabel="Save"
          validatorMapper={
            Object {
              "exact-length-validator": [Function],
              "max-length-validator": [Function],
              "min-items-validator": [Function],
              "min-length-validator": [Function],
              "pattern-validator": [Function],
              "required-validator": [Function],
              "url-validator": [Function],
            }
          }
        />
      </CardBody>
    </Card>
  </StackItem>
</Stack>
`;

exports[`component should render - no data 1`] = `
<Stack
  hasGutter={true}
>
  <StackItem>
    <Card>
      <CardBody>
        <Skeleton
          isDark={false}
          size="lg"
        />
      </CardBody>
    </Card>
  </StackItem>
</Stack>
`;

exports[`component should render - no schema 1`] = `
<Stack
  hasGutter={true}
/>
`;

exports[`component should render - one schema 1`] = `
<Stack
  hasGutter={true}
>
  <StackItem
    key="settings-form-0"
  >
    <Card>
      <CardBody>
        <FormRenderer
          FormTemplate={[Function]}
          clearOnUnmount={false}
          componentMapper={
            Object {
              "checkbox": [Function],
              "date-picker": [Function],
              "dual-list-select": Object {
                "availableOptionsActions": Array [
                  <DualListSortButton
                    position="left"
                  />,
                ],
                "chosenOptionsActions": Array [
                  <DualListSortButton
                    position="right"
                  />,
                ],
                "component": [Function],
                "isFilterable": true,
                "isSearchable": true,
                "isSortable": true,
                "resolveProps": [Function],
              },
              "field-array": [Function],
              "plain-text": [Function],
              "plain-text-with-links": [Function],
              "radio": [Function],
              "select": [Function],
              "select-field": [Function],
              "slider": [Function],
              "sub-form": [Function],
              "switch": [Function],
              "switch-field": [Function],
              "tabs": [Function],
              "text-field": [Function],
              "textarea": [Function],
              "textarea-field": [Function],
              "time-picker": [Function],
              "wizard": [Function],
            }
          }
          initialValues={Object {}}
          onSubmit={[Function]}
          schema={Object {}}
          submitLabel="Save"
          validatorMapper={
            Object {
              "exact-length-validator": [Function],
              "max-length-validator": [Function],
              "min-items-validator": [Function],
              "min-length-validator": [Function],
              "pattern-validator": [Function],
              "required-validator": [Function],
              "url-validator": [Function],
            }
          }
        />
      </CardBody>
    </Card>
  </StackItem>
</Stack>
`;
